@@ -1,5 +1,6 @@
 2021-10-03 Danilo Chang
 
+	* Implement command: solveCubic
 	* Implement command: estimateAffine2D
 	* Improve findHomography command (interface changed)
 
